--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 node_modules/
 .env
 .next
+client/node_modules/
+server/node_modules/
+client/dist
+server/dist
+client/.env
+server/.env
+client/.next
