--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-node_modules/
-.env
-.next
 client/node_modules/
 server/node_modules/
-client/dist
-server/dist
+client/dist/
+server/dist/
 client/.env
 server/.env
-client/.next
+client/.next/
